clusters/default/netalert/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: netalert
  namespace: netalert
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`netalert.${BASE_DOMAIN}`)
      kind: Rule
      services:
        - name: netalert
          port: 20211
